# spdx3tohtml

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yaml
src/spdx3tohtml/: __main__.py  main.py
